# status-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.basedpyright/: baseline.json
.devcontainer/: devcontainer.json
docs/plans/: 2026-02-04-goal-abandonment-and-per-goal-estimates-design.md  2026-02-04-goal-abandonment-and-per-goal-estimates.md
src/status_dashboard/: app.py  undo.py
src/status_dashboard/clients/: github.py  linear.py  todoist.py
src/status_dashboard/db/: goals.py
src/status_dashboard/widgets/: create_modals.py
tests/: fake_data.py  screenshot.py  test_github.py
