[project]
name = "status-dashboard"
version = "0.1.0"
description = "Terminal dashboard for PRs, Todoist, and Linear"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
status-dashboard = "status_dashboard.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "ruff>=0.14.11",
]
